--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -1,5 +1,8 @@
 {
   "about": "Om",
+  "aiChat": "AI Chat",
+  "analyze": "Analyze",
+  "analyzing": "Analyzing...",
   "apiKey": "API Nøgle",
   "apiRateLimits": "API Endepunkter Rate Grænser",
   "apksToApk": "APKS til APK",
@@ -9,21 +12,61 @@
   "batteryOptimizationMessage": "For Android 13 og derover, Vi er nødt til at deaktivere batterioptimering for denne app for at fungere korrekt i baggrunden.",
   "blutter": "Blutter",
   "blutterDesc": "Værktøj til binær analyse af flutter",
+  "blutterNote": "\nAPK: The app will directly handle APK files.\n\r\nZIP: Ensure ZIP files contain only the `libapp.so` for arm64 architecture. Failure to comply may result in errors.",
   "cancel": "Annuller",
+  "chat": "Chat",
   "checkForUpdate": "Søg efter opdateringer",
+  "checkingDeviceRam": "Checking device RAM...",
+  "chooseFile": "Choose {type}",
+  "@chooseFile": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
+  "cleanMeta": "Clean META-INF directory",
   "confirmPassword": "Bekræft Adgangskode",
   "continueAsGuest": "Fortsæt som gæst",
   "copiedToClipboard": "Kopieret til udklipsholder",
   "createAccount": "Opret Konto",
   "dexRepair": "Dex Reparation",
   "dexRepairDesc": "Reparer DEX filer",
+  "downloadedModels": "Downloaded Models:",
+  "downloading": "Downloading...",
+  "downloadModel": "Download a model:",
   "email": "E-mail",
   "emailCond": "Indtast en gyldig Gmail-adresse",
   "enterEmail": "Indtast venligst e-mail",
+  "enterModelName": "Enter a model name",
   "enterPassword": "Indtast venligst adgangskode",
   "enterUsername": "Indtast venligst brugernavn",
+  "errorDuringAnalysis": "An error occurred during analysis",
+  "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
+  "@failedToExtractFiles": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "failedToPullModel": "Failed to pull model: {error}",
+  "@failedToPullModel": {
+    "placeholders": {
+      "error": {
+        "type": "String"
+      }
+    }
+  },
+  "featureNeedsApp": "Please use the desktop or mobile app for this feature.",
+  "fetchingModelInfo": "Fetching model info...",
   "flutterAnalysis": "Analyse Af Flutter",
   "flutterAnalysisDesc": "Analyser Flutter libs",
+  "generate": "Generate",
+  "generating": "Generating...",
+  "guestNotAllowed": "Guest users cannot use this feature",
+  "iDonTLoveThisApp": "I don't care, I'll regret",
+  "iLoveThisApp": "I'm sorry, I love this app",
   "jniAnalysis": "JNI Analyse",
   "jniAnalysisDesc": "Find JNI signaturer i APK",
   "language": "Sprog: {languageCode}",
@@ -36,31 +79,100 @@
       }
     }
   },
+  "largeModelWarning": "Large Model Warning",
   "later": "Senere",
   "login": "Login",
+  "merge": "Merge",
   "mergeSplitApks": "Flet Split APKs",
+  "mergeUnsupportedOnWeb": "Split APK merging is not possible in the web version.",
+  "models": "Models",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generere MT Forbedrede Kroge",
+  "noFileSelected": "No file selected",
   "ok": "OK",
   "ollama_api_url": "OLLAMA base URL",
+  "ollamaInitializeError": "Failed to initialize Ollama client: {e}",
+  "@ollamaInitializeError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "openOllamaLibrary": "Open Ollama Library",
   "passLen": "Adgangskoden skal være på mindst 8 tegn",
   "passMisMatch": "Adgangskoder stemmer ikke overens",
   "password": "Adgangskode",
+  "pathToApkeditorJar": "Path to apkeditor jar",
   "pleaseConfirmPassword": "Bekræft venligst adgangskode",
   "preferences": "Præferencer",
+  "proceed": "Proceed",
   "profile": "Profil",
   "register": "Registrer",
+  "repair": "Repair",
+  "repairDexError": "Error repairing DEX file: {e}",
+  "@repairDexError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "repairDexSuccess": "DEX file repaired successfully. Saved to: {outputpath}",
+  "@repairDexSuccess": {
+    "placeholders": {
+      "outputpath": {
+        "type": "String"
+      }
+    }
+  },
+  "repairing": "Repairing...",
   "reset": "Reset",
+  "save": "Save",
+  "selectAModel": "Select a model to chat",
+  "selectFiles": "Select {type} File",
+  "@selectFiles": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
   "selectLanguage": "Vælg Sprog",
+  "selectOrDownloadModel": "Please select or download a model in the “Models” tab.",
+  "selectValidFile": "Please select a valid {type} file",
+  "@selectValidFile": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
+  "setJarPath": "Set apkeditor jar path",
+  "setSystemMessage": "Set System Message",
   "smaliGrammar": "Smali Grammatik",
   "suggestLogin": "Har du en konto? Log ind",
   "suggestRegister": "Har du brug for en konto?",
+  "systemMessage": "System Message",
   "theme": "Tema",
+  "typeMessage": "Type your message…",
+  "uninstallWarning": "You were just about to uninstall the app weren't you?",
+  "unsupportedDartVersion": "Currently RevEngi only supports dart stable channel\n\nCurrent Dart Version: {dartversion}",
+  "@unsupportedDartVersion": {
+    "placeholders": {
+      "dartversion": {
+        "type": "String"
+      }
+    }
+  },
   "update": "Opdater",
   "updateAvailable": "Opdatering Tilgængelig",
   "updateAvailableMessage": "En ny version af appen er tilgængelig. Vil du opdatere nu?",
+  "uploading": "Uploading...",
   "username": "Brugernavn",
   "usernameCond": "Brugernavn kan kun indeholde bogstaver, tal og understregning",
   "usernameLimit": "Brugernavn skal være mellem 5 og 15 tegn",
+  "validateModules": "Validate version of base.apk with split APKs",
+  "vrd": "Validate resources dir name",
   "welcomeBack": "Velkommen Tilbage!"
 }
