--- a/lib/l10n/app_cs.arb
+++ b/lib/l10n/app_cs.arb
@@ -1,5 +1,8 @@
 {
   "about": "O aplikaci",
+  "aiChat": "AI Chat",
+  "analyze": "Analyze",
+  "analyzing": "Analyzing...",
   "apiKey": "API klíč",
   "apiRateLimits": "Limity API koncových bodů",
   "apksToApk": "APKS do APK",
@@ -9,21 +12,61 @@
   "batteryOptimizationMessage": "Pro Android 13 a výše je třeba zakázat optimalizaci baterie, aby tato aplikace fungovala správně na pozadí.",
   "blutter": "Blutter",
   "blutterDesc": "Binární analytický nástroj Flutter",
+  "blutterNote": "\nAPK: The app will directly handle APK files.\n\r\nZIP: Ensure ZIP files contain only the `libapp.so` for arm64 architecture. Failure to comply may result in errors.",
   "cancel": "Zrušit",
+  "chat": "Chat",
   "checkForUpdate": "Zkontrolovat aktualizace",
+  "checkingDeviceRam": "Checking device RAM...",
+  "chooseFile": "Choose {type}",
+  "@chooseFile": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
+  "cleanMeta": "Clean META-INF directory",
   "confirmPassword": "Potvrzení hesla",
   "continueAsGuest": "Pokračovat jako hosta",
   "copiedToClipboard": "Zkopírováno do schránky",
   "createAccount": "Vytvořit účet",
   "dexRepair": "Dex oprava",
   "dexRepairDesc": "Opravit soubory DEX",
+  "downloadedModels": "Downloaded Models:",
+  "downloading": "Downloading...",
+  "downloadModel": "Download a model:",
   "email": "E-mailová adresa",
   "emailCond": "Zadejte prosím platnou adresu Gmail",
   "enterEmail": "Prosím, zadejte e-mail",
+  "enterModelName": "Enter a model name",
   "enterPassword": "Zadejte prosím heslo",
   "enterUsername": "Zadejte prosím uživatelské jméno",
+  "errorDuringAnalysis": "An error occurred during analysis",
+  "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
+  "@failedToExtractFiles": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "failedToPullModel": "Failed to pull model: {error}",
+  "@failedToPullModel": {
+    "placeholders": {
+      "error": {
+        "type": "String"
+      }
+    }
+  },
+  "featureNeedsApp": "Please use the desktop or mobile app for this feature.",
+  "fetchingModelInfo": "Fetching model info...",
   "flutterAnalysis": "Analýza znečišťujících látek",
   "flutterAnalysisDesc": "Analyzovat liby pro znečišťovatel",
+  "generate": "Generate",
+  "generating": "Generating...",
+  "guestNotAllowed": "Guest users cannot use this feature",
+  "iDonTLoveThisApp": "I don't care, I'll regret",
+  "iLoveThisApp": "I'm sorry, I love this app",
   "jniAnalysis": "Analýza JNI",
   "jniAnalysisDesc": "Najít podpisy JNI v APK",
   "language": "Jazyk: {languageCode}",
@@ -36,31 +79,100 @@
       }
     }
   },
+  "largeModelWarning": "Large Model Warning",
   "later": "Později",
   "login": "Přihlásit se",
+  "merge": "Merge",
   "mergeSplitApks": "Sloučit rozdělené APK",
+  "mergeUnsupportedOnWeb": "Split APK merging is not possible in the web version.",
+  "models": "Models",
   "mtHook": "MT háček",
   "mtHookDesc": "Generovat MT vylepšené háčky",
+  "noFileSelected": "No file selected",
   "ok": "Ok",
   "ollama_api_url": "Základní URL OLLAMA",
+  "ollamaInitializeError": "Failed to initialize Ollama client: {e}",
+  "@ollamaInitializeError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "openOllamaLibrary": "Open Ollama Library",
   "passLen": "Heslo musí mít alespoň 8 znaků",
   "passMisMatch": "Hesla se neshodují",
   "password": "Heslo",
+  "pathToApkeditorJar": "Path to apkeditor jar",
   "pleaseConfirmPassword": "Potvrďte prosím heslo",
   "preferences": "Předvolby",
+  "proceed": "Proceed",
   "profile": "Profil",
   "register": "Registrovat se",
+  "repair": "Repair",
+  "repairDexError": "Error repairing DEX file: {e}",
+  "@repairDexError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "repairDexSuccess": "DEX file repaired successfully. Saved to: {outputpath}",
+  "@repairDexSuccess": {
+    "placeholders": {
+      "outputpath": {
+        "type": "String"
+      }
+    }
+  },
+  "repairing": "Repairing...",
   "reset": "Reset",
+  "save": "Save",
+  "selectAModel": "Select a model to chat",
+  "selectFiles": "Select {type} File",
+  "@selectFiles": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
   "selectLanguage": "Vyberte jazyk",
+  "selectOrDownloadModel": "Please select or download a model in the “Models” tab.",
+  "selectValidFile": "Please select a valid {type} file",
+  "@selectValidFile": {
+    "placeholders": {
+      "type": {
+        "type": "String"
+      }
+    }
+  },
+  "setJarPath": "Set apkeditor jar path",
+  "setSystemMessage": "Set System Message",
   "smaliGrammar": "Smali Grammar",
   "suggestLogin": "Máte účet? Přihlašte se",
   "suggestRegister": "Potřebujete účet? Registrovat",
+  "systemMessage": "System Message",
   "theme": "Téma",
+  "typeMessage": "Type your message…",
+  "uninstallWarning": "You were just about to uninstall the app weren't you?",
+  "unsupportedDartVersion": "Currently RevEngi only supports dart stable channel\n\nCurrent Dart Version: {dartversion}",
+  "@unsupportedDartVersion": {
+    "placeholders": {
+      "dartversion": {
+        "type": "String"
+      }
+    }
+  },
   "update": "Aktualizovat",
   "updateAvailable": "Dostupná aktualizace",
   "updateAvailableMessage": "Je dostupná nová verze aplikace. Chcete ji nyní aktualizovat?",
+  "uploading": "Uploading...",
   "username": "Uživatelské jméno",
   "usernameCond": "Uživatelské jméno může obsahovat pouze písmena, čísla a podtržítko",
   "usernameLimit": "Uživatelské jméno musí být v rozmezí 5 až 15 znaků",
+  "validateModules": "Validate version of base.apk with split APKs",
+  "vrd": "Validate resources dir name",
   "welcomeBack": "Vítejte zpátky!"
 }
